[package]
name = "http-kit"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2.6"
async-trait = "0.1.57"
bytes = "1.1.0"
bytestr = "0.1.0"
anyhow = "1.0.62"
futures-lite = "1.13.0"

[dependencies.serde_json]
version = "1.0.108"
optional = true

[dependencies.serde_urlencoded]
version = "0.7.1"
optional = true

[dependencies.serde]
version = "1.0.192"
optional = true

[dependencies.http-body]
version = "0.4.5"
optional = true

[dependencies.mime]
version = "0.3.17"
optional = true

[dependencies.async-fs]
version = "2.1.0"
optional = true

[features]
default = ["json","form","fs"]
mime = ["dep:mime"]
http_body = ["dep:http-body"]
json = ["dep:serde","dep:serde_json"]
form = ["dep:serde","dep:serde_urlencoded"]
fs = ["dep:async-fs"]
